--- a/sec_ds_lv3_prob2_prob.ipynb
+++ b/sec_ds_lv3_prob2_prob.ipynb
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "663ab61b",
+   "id": "3310344c",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "30bb0552",
+   "id": "5047752e",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da945345",
+   "id": "52995f03",
    "metadata": {},
    "source": [
     "**TIP!**: Dunn Index 구하기\n",
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20e7a9c",
+   "id": "0090c2eb",
    "metadata": {},
    "source": [
     "**Question**\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "28cba325",
+   "id": "63faeb07",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f209fab0",
+   "id": "6616df34",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "69b30682",
+   "id": "8f4eaf6a",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0322d9a8",
+   "id": "79538579",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a883f3c2",
+   "id": "3a2a0ba2",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "dfece2bc",
+   "id": "c4a62104",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "6907b50d",
+   "id": "92992c14",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "be5d570d",
+   "id": "507ee1eb",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c571b1e",
+   "id": "bea57108",
    "metadata": {},
    "source": [
     "**TIP**: pdist, cdist에 사용자 정의 척도 적용\n",
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "0127d74b",
+   "id": "319087e6",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "567db533",
+   "id": "e694ea2b",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "2535e9fa",
+   "id": "32a00ab7",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "8a9a5bc8",
+   "id": "76621bbf",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "884b742b",
+   "id": "dcc96285",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "413cf122",
+   "id": "d9cbb21c",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec81d88",
+   "id": "40f6e08c",
    "metadata": {},
    "source": [
     "**TIP** xgb.XGBRegressor custom loss function을 적용해 봅니다.\n",
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d01eb21",
+   "id": "0826e6f3",
    "metadata": {},
    "source": [
     "이를 위해서는 Gradient와 Hessian을 구해야 합니다. \n",
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5ec995dc",
+   "id": "7e6ff298",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "0afdc3f3",
+   "id": "c3bf3c30",
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "df22e39f",
+   "id": "f0fbae2c",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "40452d62",
+   "id": "68f0ee17",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2b3fbe0d",
+   "id": "01e51f62",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cc0aac40",
+   "id": "31b15471",
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "99a91ebf",
+   "id": "0e64efcf",
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "802949ae",
+   "id": "6345f545",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d5366f88",
+   "id": "f0ef853b",
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "de9db8f5",
+   "id": "ad44547b",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "e8c333d4",
+   "id": "d3cc5497",
    "metadata": {},
    "outputs": [
     {
@@ -3039,7 +3039,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "61c24de5",
+   "id": "310c3150",
    "metadata": {},
    "outputs": [
     {
@@ -3175,7 +3175,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "ebdd85ca",
+   "id": "4a7aca1c",
    "metadata": {},
    "outputs": [
     {
@@ -3198,7 +3198,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "5ec40300",
+   "id": "a484d635",
    "metadata": {},
    "outputs": [
     {
@@ -3809,7 +3809,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "ea0bd077",
+   "id": "0ab488ac",
    "metadata": {},
    "outputs": [
     {
@@ -3966,7 +3966,10 @@
    "id": "4c1c89a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "df_prob3_train, df_prob3_test = train_test_split(df_prob3, train_size=0.8, random_state=123)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4012,7 +4015,32 @@
    "id": "b7ea7f24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score # 성능지표: 𝐴𝑐𝑐𝑢𝑟𝑎𝑐𝑦\n",
+    "\n",
+    "# cont0 ~ 13, cat0 ~ 9까지 원핫-인코딩 파생 변수 (변수명, 범주순으로 알파벳 순서)\n",
+    "X_xgb = cont_cols + dum_cols.tolist()\n",
+    "# 주의!!!: xgboost를 사용할 때는 파라메터명을 정확하게 기입하셔야 합니다. (Warning/Error가 잘못기입해도 발생하지 않습니다.)\n",
+    "clf_xgb = xgb.XGBClassifier(\n",
+    "    # 트리의 최대 깊이: 2\n",
+    "    # L1 규제: 0.1\n",
+    "    # L2 규제: 0.1\n",
+    "    # 트리 당 컬럼 샘플링 비율: 0.25\n",
+    "    # 트리의 수: 500\n",
+    "    # random_state: 123\n",
+    ")\n",
+    "clf_xgb.fit(df_prob3_train[X_xgb], df_prob3_train['targetA'])\n",
+    "# prob3_test으로 다음 성능지표로 평가한 값을 C 라고 한다.\n",
+    "C = accuracy_score(\n",
+    "    df_prob3_test['targetA'], clf_xgb.predict(df_prob3_test[X_xgb])\n",
+    ")\n",
+    "(\n",
+    "    C,\n",
+    "    accuracy_score(\n",
+    "        df_prob3_train['targetA'], clf_xgb.predict(df_prob3_train[X_xgb])\n",
+    "    )\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
