--- a/sec_ds_lv3_prob2_prob.ipynb
+++ b/sec_ds_lv3_prob2_prob.ipynb
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "62612bfd",
+   "id": "b6cea25f",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "89039eea",
+   "id": "7353f876",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd79ac8d",
+   "id": "3bbfb176",
    "metadata": {},
    "source": [
     "**TIP!**: Dunn Index 구하기\n",
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24725d45",
+   "id": "c9e6296e",
    "metadata": {},
    "source": [
     "**Question**\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "caae585b",
+   "id": "dbd963ce",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "31af5151",
+   "id": "b95c9ea6",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d91fc390",
+   "id": "6f56eafa",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "15157c2f",
+   "id": "af0c82c1",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "50a7ec19",
+   "id": "ee9699d2",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "3ea2def3",
+   "id": "abfc4c5c",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "41a1d772",
+   "id": "3a7875dd",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "cbc0b34a",
+   "id": "6818132e",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07c9854",
+   "id": "5defbf22",
    "metadata": {},
    "source": [
     "**TIP**: pdist, cdist에 사용자 정의 척도 적용\n",
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "2704bf02",
+   "id": "c4c2a713",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "88baebdd",
+   "id": "1f3f17c9",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c48581d1",
+   "id": "388c2cc2",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c7d300fa",
+   "id": "82384c67",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "1c5fcf30",
+   "id": "cedcbb57",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "a51873e4",
+   "id": "9fb1b502",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08fc4741",
+   "id": "22ddd31f",
    "metadata": {},
    "source": [
     "**TIP** xgb.XGBRegressor custom loss function을 적용해 봅니다.\n",
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4dc199c",
+   "id": "813d56ce",
    "metadata": {},
    "source": [
     "이를 위해서는 Gradient와 Hessian을 구해야 합니다. \n",
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "7a10899f",
+   "id": "f74ee286",
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "8c0831ca",
+   "id": "8213482a",
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "035e71c4",
+   "id": "dcb31c40",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8b2e10b5",
+   "id": "0a1b7384",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9b0349d8",
+   "id": "3a504d08",
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "80ce4257",
+   "id": "73152b9b",
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "587be9fe",
+   "id": "3ebec9de",
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "acf01836",
+   "id": "3fdffb33",
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "bd0a7a91",
+   "id": "30348cc6",
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9349bac6",
+   "id": "a3443c07",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "9c0216d3",
+   "id": "2c24b708",
    "metadata": {},
    "outputs": [
     {
@@ -3039,7 +3039,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "b741bad7",
+   "id": "4705312d",
    "metadata": {},
    "outputs": [
     {
@@ -3175,7 +3175,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "2bd457c4",
+   "id": "36c48782",
    "metadata": {},
    "outputs": [
     {
@@ -3198,7 +3198,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "db180593",
+   "id": "5a9da014",
    "metadata": {},
    "outputs": [
     {
@@ -3809,7 +3809,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "855ea5d9",
+   "id": "19f6b7e1",
    "metadata": {},
    "outputs": [
     {
@@ -4177,7 +4177,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "77f69232",
+   "id": "c52776a5",
    "metadata": {},
    "outputs": [
     {
@@ -4581,7 +4581,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "84de0d9d",
+   "id": "d517055e",
    "metadata": {},
    "outputs": [
     {
@@ -4612,7 +4612,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "09d6478f",
+   "id": "98b69cd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4743,7 +4743,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "f4761999",
+   "id": "b98b9bec",
    "metadata": {},
    "outputs": [
     {
@@ -4811,11 +4811,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "id": "e5e1f8f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cont0</th>\n",
+       "      <th>cont1</th>\n",
+       "      <th>cont2</th>\n",
+       "      <th>cont3</th>\n",
+       "      <th>cont4</th>\n",
+       "      <th>cont5</th>\n",
+       "      <th>cont6</th>\n",
+       "      <th>cont7</th>\n",
+       "      <th>cont8</th>\n",
+       "      <th>cont9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cat9_F</th>\n",
+       "      <th>cat9_G</th>\n",
+       "      <th>cat9_H</th>\n",
+       "      <th>cat9_I</th>\n",
+       "      <th>cat9_J</th>\n",
+       "      <th>cat9_K</th>\n",
+       "      <th>cat9_L</th>\n",
+       "      <th>cat9_M</th>\n",
+       "      <th>cat9_N</th>\n",
+       "      <th>cat9_O</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>267387</td>\n",
+       "      <td>0.65226</td>\n",
+       "      <td>0.55771</td>\n",
+       "      <td>0.25398</td>\n",
+       "      <td>0.28196</td>\n",
+       "      <td>0.82400</td>\n",
+       "      <td>0.22443</td>\n",
+       "      <td>0.69220</td>\n",
+       "      <td>0.30912</td>\n",
+       "      <td>0.47134</td>\n",
+       "      <td>0.53290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>410037</td>\n",
+       "      <td>0.36970</td>\n",
+       "      <td>0.68159</td>\n",
+       "      <td>0.30038</td>\n",
+       "      <td>0.20156</td>\n",
+       "      <td>0.46113</td>\n",
+       "      <td>0.43278</td>\n",
+       "      <td>0.97199</td>\n",
+       "      <td>0.62596</td>\n",
+       "      <td>0.40193</td>\n",
+       "      <td>0.49181</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>139373</td>\n",
+       "      <td>0.47881</td>\n",
+       "      <td>0.63976</td>\n",
+       "      <td>0.40024</td>\n",
+       "      <td>0.24153</td>\n",
+       "      <td>0.27128</td>\n",
+       "      <td>0.36238</td>\n",
+       "      <td>0.41310</td>\n",
+       "      <td>0.27010</td>\n",
+       "      <td>0.40112</td>\n",
+       "      <td>0.53052</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>113765</td>\n",
+       "      <td>0.43438</td>\n",
+       "      <td>0.77575</td>\n",
+       "      <td>0.54887</td>\n",
+       "      <td>0.21935</td>\n",
+       "      <td>0.27944</td>\n",
+       "      <td>0.32670</td>\n",
+       "      <td>0.42301</td>\n",
+       "      <td>0.28331</td>\n",
+       "      <td>0.46425</td>\n",
+       "      <td>0.38302</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>179915</td>\n",
+       "      <td>0.47866</td>\n",
+       "      <td>0.64326</td>\n",
+       "      <td>0.37255</td>\n",
+       "      <td>0.21004</td>\n",
+       "      <td>0.41188</td>\n",
+       "      <td>0.20121</td>\n",
+       "      <td>0.37466</td>\n",
+       "      <td>0.46316</td>\n",
+       "      <td>0.75578</td>\n",
+       "      <td>0.55676</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 45 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          cont0    cont1    cont2    cont3    cont4    cont5    cont6  \\\n",
+       "id                                                                      \n",
+       "267387  0.65226  0.55771  0.25398  0.28196  0.82400  0.22443  0.69220   \n",
+       "410037  0.36970  0.68159  0.30038  0.20156  0.46113  0.43278  0.97199   \n",
+       "139373  0.47881  0.63976  0.40024  0.24153  0.27128  0.36238  0.41310   \n",
+       "113765  0.43438  0.77575  0.54887  0.21935  0.27944  0.32670  0.42301   \n",
+       "179915  0.47866  0.64326  0.37255  0.21004  0.41188  0.20121  0.37466   \n",
+       "\n",
+       "          cont7    cont8    cont9  ...  cat9_F  cat9_G  cat9_H  cat9_I  \\\n",
+       "id                                 ...                                   \n",
+       "267387  0.30912  0.47134  0.53290  ...       0       1       0       0   \n",
+       "410037  0.62596  0.40193  0.49181  ...       1       0       0       0   \n",
+       "139373  0.27010  0.40112  0.53052  ...       0       0       0       0   \n",
+       "113765  0.28331  0.46425  0.38302  ...       0       1       0       0   \n",
+       "179915  0.46316  0.75578  0.55676  ...       0       0       0       0   \n",
+       "\n",
+       "        cat9_J  cat9_K  cat9_L  cat9_M  cat9_N  cat9_O  \n",
+       "id                                                      \n",
+       "267387       0       0       0       0       0       0  \n",
+       "410037       0       0       0       0       0       0  \n",
+       "139373       1       0       0       0       0       0  \n",
+       "113765       0       0       0       0       0       0  \n",
+       "179915       0       0       1       0       0       0  \n",
+       "\n",
+       "[5 rows x 45 columns]"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "drop_list = df_basetable[cat_cols].apply(\n",
+    "    lambda x: np.sort(x.unique())[0], axis = 0\n",
+    ").tolist()\n",
+    "ohe = OneHotEncoder(\n",
+    "    sparse = False, \n",
+    "    drop = drop_list # drop = 'first'\n",
+    ")\n",
+    "ohe.fit(df_basetable[cat_cols])\n",
+    "dum_cols = ohe.get_feature_names(cat_cols)\n",
+    "df_prob4 = df_basetable.drop(columns = cat_cols).join(\n",
+    "    pd.DataFrame(\n",
+    "        ohe.transform(df_basetable[cat_cols]), index = df_basetable.index, columns = dum_cols, dtype ='int'\n",
+    "    )\n",
+    ")\n",
+    "df_prob4.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4836,11 +5080,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "id": "06ac6275",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "df_prob4_train, df_prob4_test = train_test_split(\n",
+    "    df_prob4, train_size = 0.8, random_state = 123\n",
+    ")\n",
+    "df_prob4_train, df_prob4_test = df_prob4_train.copy(), df_prob4_test.copy()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4873,11 +5123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "id": "0028801e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = np.arange(0, 101) / 100 # np.linspace(0, 1, 101)\n",
+    "q_val = df_prob4_train['cont0'].quantile(q)\n",
+    "q_val.iloc[[0, -1]] = [-np.inf, np.inf]\n",
+    "q_range = pd.cut(df_prob4_train['cont0'], bins = q_val, right = True)\n"
+   ]
   },
   {
    "cell_type": "markdown",
